--- a/public/index.html
+++ b/public/index.html
@@ -37,10 +37,23 @@
 			<button id="randomizeBtn">Randomisiere</button>
 			<label for="sizeInput">
 				Größe
+				<!--
+					Using type="number" presents a num-pad like virtual keyboard to smartphone or tablet users.
+
+					For Firefox: <input type="number"> accepts the scientific notation (e.g.: 1e3 = 1000) input,
+						that's why the digit-pattern-match is left here.
+					
+					Set an upper limit of max="50" to prevent computaton freeze:
+						That's up to 5k elements: 2500 checkboxes + 2500 labels.
+						Furthermore: you have to keep in mind 2500 event listener bindings with current (naive) implementation and
+						  every checkWin-call needs to loop over every (worst case) checkboxes to get the "checked" property...
+				-->
 				<input
-					type="text"
+					type="number"
 					id="sizeInput"
 					pattern="\d+"
+					min="1"
+					max="50"
 					value="5"
 				/>
 			</label>
