--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
 						that's why the digit-pattern-match is left here.
 					
 					Set an upper limit of max="50" to prevent computaton freeze:
-						That's up to 5k elements: 2500 checkboxes + 2500 labels.
+						That's up to 2500 checkboxes.
 						Furthermore: you have to keep in mind 2500 event listener bindings with current (naive) implementation and
 						  every checkWin-call needs to loop over every (worst case) checkboxes to get the "checked" property...
 				-->
