fix: reduce checkbox "change" eventListener count
Only need one "change" listener:
the event bubbles (by default) up the DOM tree.

This patch also reduces memory-leaks:
until now, every checkbox has it's own eventhandler, that was never detached.

--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,8 @@
 					
 					Set an upper limit of max="50" to prevent computaton freeze:
 						That's up to 2500 checkboxes.
-						Furthermore: you have to keep in mind 2500 event listener bindings with current (naive) implementation and
-						  every checkWin-call needs to loop over every (worst case) checkboxes to get the "checked" property...
+						Furthermore you have to keep in mind that every checkWin-call needs to
+						loop over every (worst case) checkbox to get the "checked" property...
 				-->
 				<input
 					type="number"
